fix [GraalVM 21.3.0.r17] Optaplanner Native Build Failure with JDK17 #993
(cherry picked from commit bb8cb91d5958fa40f55896483e87b656726cc922)